cabal-version: >=1.10
name: applied-fp-course
version: 0.1.0.0
license: BSD3
license-file: LICENCE
copyright: Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
maintainer: sean.chalmers@data61.csiro.au
author: QFPL @ Data61
tested-with: ghc ==8.6.1 ghc ==8.4.3 ghc ==8.2.2 ghc ==8.0.2
synopsis: Simplest of web apps for educational purposes.
description:
    Haskell course for people looking to start building larger applications.
category: Education
build-type: Simple
extra-source-files:
    changelog.md

source-repository head
    type: git
    location: https://github.com/qfpl/applied-fp-course

library
    exposed-modules:
        Level01.Core
        Level02.Core
        Level02.Types
        Level04.Conf
        Level04.DB
        Level04.DB.Types
        Level04.Core
        Level04.Types
        Level04.Types.CommentText
        Level04.Types.Error
        Level04.Types.Topic
        Level05.AppM
        Level05.Conf
        Level05.DB
        Level05.DB.Types
        Level05.Core
        Level05.Types
        Level05.Types.CommentText
        Level05.Types.Error
        Level05.Types.Topic
        Level06.AppM
        Level06.Conf
        Level06.Conf.CommandLine
        Level06.Conf.File
        Level06.DB
        Level06.DB.Types
        Level06.Core
        Level06.Types
        Level06.Types.CommentText
        Level06.Types.Error
        Level06.Types.Topic
        Level07.AppM
        Level07.Conf
        Level07.Conf.CommandLine
        Level07.Conf.File
        Level07.DB
        Level07.DB.Types
        Level07.Core
        Level07.Responses
        Level07.Types
        Level07.Types.CommentText
        Level07.Types.Error
        Level07.Types.Topic
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -fno-warn-unused-binds -fno-warn-unused-do-bind
                 -fno-warn-unused-imports -fno-warn-type-defaults -ferror-spans
    build-depends:
        base >=4.8 && <4.13,
        wai ==3.2.*,
        warp ==3.2.*,
        http-types >=0.9 && <0.13,
        bytestring ==0.10.*,
        text ==1.2.*,
        optparse-applicative >=0.13 && <0.15,
        mtl ==2.2.*,
        time >=1.4 && <1.10,
        old-locale >=1.0 && <1.5,
        contravariant >=1.4 && <1.6,
        sqlite-simple ==0.4.*,
        sqlite-simple-errors ==0.6.*,
        semigroups ==0.18.*,
        transformers >=0.4 && <0.6,
        lens >=4.15 && <4.18,
        waargonaut >=0.4.2 && <0.5,
        attoparsec >=0.13 && <0.15,
        system-filepath -any

-- Level Executables
executable level01-exe
    main-is: Level01.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

executable level02-exe
    main-is: Level02.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

executable level04-exe
    main-is: Level04.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

executable level05-exe
    main-is: Level05.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

executable level06-exe
    main-is: Level06.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

executable level07-exe
    main-is: Level07.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any

test-suite app-fp-tests
    type: exitcode-stdio-1.0
    main-is: TestLevel02.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <4.13,
        applied-fp-course -any,
        wai ==3.2.*,
        wai-extra ==3.0.*,
        http-types >=0.9 && <0.13,
        tasty >=0.8 && <1.2,
        tasty-hunit >=0.9 && <0.11,
        tasty-wai >=0.1 && <0.2,
        bytestring ==0.10.*,
        text ==1.2.*,
        mtl ==2.2.*,
        semigroups ==0.18.*,
        transformers >=0.4 && <0.6,
        hedgehog >=0.6 && <0.7,
        tasty-hedgehog >=0.2 && <0.3

test-suite doctests
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    ghc-options: -threaded
    build-depends:
        base >=4.8 && <4.13,
        doctest >=0.11 && <0.17,
        applied-fp-course -any
